syntax = "proto3";

package crud;

// Import necessary types
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

option go_package = "lk/datafoundation/crud-api";


message Kind {
    string major = 1;
    string minor = 2;
}

message TimeBasedValue {
    google.protobuf.Timestamp startTime = 1;
    google.protobuf.Timestamp endTime = 2;
    google.protobuf.Any value = 3; // Storing any type of value
}

message Relationship {
    string relatedEntityId = 1;
    google.protobuf.Timestamp startTime = 2;
    google.protobuf.Timestamp endTime = 3;
}

message Entity {
    string id = 1; // Read-only unique identifier
    Kind kind = 2; // Read-only entity type
    google.protobuf.Timestamp created = 3; // Read-only created timestamp
    google.protobuf.Timestamp terminated = 4; // Nullable terminated timestamp
    TimeBasedValue name = 5;
    map<string, google.protobuf.Any> metadata = 6; // Metadata as a flexible key-value map
    map<string, TimeBasedValueList> attributes = 7; // Attributes as a time-based list
    map<string, Relationship> relationships = 8; // Relationships to other entities
}

// Wrapper for a repeated TimeBasedValue (since Protobuf does not support nested lists in maps)
message TimeBasedValueList {
    repeated TimeBasedValue values = 1;
}

// Service definition for CRUD operations
service CrudService {
    rpc CreateEntity(Entity) returns (Entity);
    rpc ReadEntity(EntityId) returns (Entity);
    rpc UpdateEntity(Entity) returns (Entity);
    rpc DeleteEntity(EntityId) returns (Empty);
}

// Request message for deleting an entity by ID
message EntityId {
    string id = 1;
}

// Empty message response
message Empty {}
